Fix Adding a label to a heading breaks the page menu (#624)
* Remove labels sidebar

* Update labels rst

--- a/src/css/components/_secondary-side-nav.scss
+++ b/src/css/components/_secondary-side-nav.scss
@@ -25,7 +25,7 @@
       }
 
       .label {
-        margin-left: 5px;
+        display: none;
       }
 
       a {
